index.html serve.sh

--- a/nginx-moscow.conf
+++ b/nginx-moscow.conf
@@ -2,7 +2,7 @@
 server {
 	# serve on http://www.somebits.com:8001/
 	listen 8001;
-	server_name ec2-54-72-107-105.eu-west-1.compute.amazonaws.com;
+	server_name ec2-54-72-102-212.eu-west-1.compute.amazonaws.com;
 
 	# Forward /rivers/* to Gunicorn. Buffer to RAM aggressively.
 	location /moscow {
@@ -13,7 +13,8 @@ server {
 
 	# Ensure clients know to cache responses
 	expires 30d;
-
+	
+	root /etc/nginx/sites-enabled/moscow;
 	# Ensure good gzip compression for the JSON tiles
 	gzip_types text/json;
 	gzip_comp_level 6;
