--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -20,7 +20,9 @@
                     },
 			"queries":
       		[
-		       "SELECT way AS __geometry__, building FROM planet_osm_polygon WHERE building IS NOT NULL OR construction IS NOT NULL"
+                "SELECT wkb_geometry AS __geometry__, address, year FROM ogrgeojson"
+                
+		       //"SELECT way AS __geometry__, building FROM planet_osm_polygon WHERE building IS NOT NULL OR construction IS NOT NULL"
 		]
         }}}
     }
