--- a/nginx-moscow.conf
+++ b/nginx-moscow.conf
@@ -1,6 +1,6 @@
 # Nginx configuration for proxying Gunicorn. Tested with Ubuntu 12.04
 server {
-	# serve on http://www.somebits.com:8001/
+	# serve on amazon
 	listen 8001;
 	server_name ec2-54-72-102-212.eu-west-1.compute.amazonaws.com;
 
