--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -20,7 +20,7 @@
                     },
 			"queries":
       		[
-                "SELECT wkb_geometry AS __geometry__, address, year FROM ogrgeojson"
+                "SELECT geom AS __geometry__, address, year FROM msk"
 		    ]
         }}}
     }
