--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -11,7 +11,7 @@
             "provider": {
                 "class": "TileStache.Goodies.VecTiles:Provider",
                 "kwargs": {
-                    "clip": true,
+                    "clip": false,
                     "dbinfo": {
                         "host": "vectortiles.cqhmm2t3v2eb.eu-west-1.rds.amazonaws.com",
                         "database": "vectortiles",
@@ -20,7 +20,7 @@
                     },
 			"queries":
       		[
-                "SELECT geom AS __geometry__, year FROM msk_grouped2"
+                "SELECT geom AS __geometry__, year FROM msk_grouped"
 		    ]
         }}}
     }
