--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -11,7 +11,7 @@
             "provider": {
                 "class": "TileStache.Goodies.VecTiles:Provider",
                 "kwargs": {
-                    "clip": false,
+                    "clip": true,
                     "dbinfo": {
                         "host": "vectortiles.cqhmm2t3v2eb.eu-west-1.rds.amazonaws.com",
                         "database": "vectortiles",
