--- a/nginx-moscow.conf
+++ b/nginx-moscow.conf
@@ -2,7 +2,7 @@
 server {
 	# serve on amazon
 	listen 8001;
-	server_name ec2-54-72-102-212.eu-west-1.compute.amazonaws.com;
+	server_name 54.72.144.192;
 
 	# Forward /rivers/* to Gunicorn. Buffer to RAM aggressively.
 	location /moscow {
