--- a/nginx-moscow.conf
+++ b/nginx-moscow.conf
@@ -4,7 +4,7 @@ server {
 	listen 8001;
 	server_name 54.72.144.192;
 
-	# Forward /rivers/* to Gunicorn. Buffer to RAM aggressively.
+	# Forward /moscow/* to Gunicorn. Buffer to RAM aggressively.
 	location /moscow {
 	    proxy_pass http://localhost:8000;
 	    proxy_buffering on;
