--- a/nginx-moscow.conf
+++ b/nginx-moscow.conf
@@ -16,7 +16,8 @@ server {
 	
 	root /etc/nginx/sites-enabled/moscow;
 	# Ensure good gzip compression for the JSON tiles
-	gzip_types text/json;
+	gzip  on;
+	gzip_types text/json application/json;
 	gzip_comp_level 6;
 
 	location /nginx_status {
