msk instead grouped and with index

--- a/tilestache.cfg
+++ b/tilestache.cfg
@@ -20,7 +20,7 @@
                     },
 			"queries":
       		[
-                "SELECT geom AS __geometry__, year FROM msk_grouped2"
+                "SELECT geom AS __geometry__, year FROM msk"
 		    ]
         }}}
     }
